[profile.release]
panic = 'unwind'

[workspace]
members = [
  'node',
  'runtime/basilisk',
  'pallets/marketplace',
  'integration-tests',
]

[workspace.dependencies]
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
hydradx-traits = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
hydradx-adapters = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-relaychain-info = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-transaction-multi-payment = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-asset-registry = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-nft = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-currencies = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-transaction-pause = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-route-executor = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-liquidity-mining = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
warehouse-liquidity-mining = { package="pallet-liquidity-mining", git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-ema-oracle = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-duster = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-collator-rewards = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
test-utils = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-xcm-rate-limiter = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-xyk = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
pallet-lbp = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0", default-features = false }
hydra-dx-build-script-utils = { git = "https://github.com/galacticcouncil/HydraDX-node", branch = "polkadot-v1.1.0" }

primitive-types = { version = "0.12.0", default-features = false }
log = "0.4.20"

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support-procedural = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support-procedural-tools = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-society = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-staking-reward-fn = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-executor-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-executor-wasmtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-informant = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network-gossip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc-server = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
#sp-consensus-vrf = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-wasm-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-mmr-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, features = ["wasm-api"] }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-statement-table = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# ORML dependencies
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

# orml XCM support
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xcm = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

# InvArch Tinkernet Multisig dependencies
orml-xcm-builder-kusama = { git = "https://github.com/open-web3-stack/orml-xcm-builder", branch = "polkadot-v1.1.0", default-features = false }


[patch."https://github.com/paritytech/polkadot-sdk"]
frame-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-election-provider-support = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-executive = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-support = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-support-procedural = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-support-procedural-tools = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-support-procedural-tools-derive = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-system-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
frame-try-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-authority-discovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-authorship = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-babe = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-balances = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-bounties = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-collective = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-democracy = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-elections-phragmen = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-identity = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-im-online = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-indices = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-membership = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-multisig = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-offences = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-offences-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-proxy = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-recovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-scheduler = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-session = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-session-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-society = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-staking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-staking-reward-curve = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-staking-reward-fn = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-sudo = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-tips = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-treasury = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-uniques = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-utility = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-vesting = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-preimage = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-authority-discovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-block-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-chain-spec = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-client-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-client-db = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-babe-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-epochs = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-slots = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-consensus-grandpa = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-executor = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-executor-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-executor-wasmtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-informant = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-keystore = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-network = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-network-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-network-sync = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-network-gossip = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-offchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-rpc-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-rpc-server = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-sync-state-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-telemetry = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-tracing = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-transaction-pool-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-utils = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sc-sysinfo = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-application-crypto = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-arithmetic = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-authority-discovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-block-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-blockchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-consensus = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-consensus-slots = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-consensus-beefy = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
#sp-consensus-vrf = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-core = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-debug-derive = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-externalities = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-inherents = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-io = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-keyring = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-keystore = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-maybe-compressed-blob = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-npos-elections = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-offchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-runtime-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-runtime-interface-proc-macro = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-session = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-staking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-state-machine = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-std = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-storage = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-tracing = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-trie = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-version = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-wasm-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-weights = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
substrate-build-script-utils = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
substrate-wasm-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-mmr = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
sp-mmr-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }

kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
pallet-xcm = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-core-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-node-core-pvf = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-node-network-protocol = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-node-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-node-subsystem = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-node-subsystem-util = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-overseer = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-runtime-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-runtime-parachains = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-statement-table = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
rococo-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
westend-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
#xcm = { package = "staging-xcm", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
polkadot-xcm = { package = "staging-xcm", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
xcm-emulator = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }

pallet-collator-selection = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-consensus-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-consensus-proposer = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-network = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-client-collator = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-pallet-aura-ext = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-pallet-dmp-queue = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-pallet-xcm = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-primitives-core = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-primitives-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-primitives-utility = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
parachain-info = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-relay-chain-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "hydradx-fork-v1.1.0" }
